# investsense-engine

./: .gitignore  LICENSE  README.md  REASONING_FLOW.md  WORKFLOW.md  pyproject.toml  run_full_cycle.py  verify_gatekeeper.py  verify_librarian.py  verify_scouts.py
.github/workflows/: daily_brief.yml
PRD/: phase3_alerts_evolution.md  project_health_ralph_loop.md
docs/: KAZUHA_PENTAGONAL_ENGINE_WHITE_PAPER.md  KAZUHA_SEARCH_ENGINE_WHITE_PAPER.md  RAW_SEARCH_INFO.md  RAW_THINKING.md  RAW_US_GOV_API.md  RSS_INTEGRATION_GUIDE.md
docs/PRD/: rss_integration.md  vibe_hunter_loop.md
docs/manuals/: REASONING_FLOW.md  WORKFLOW.md
docs/plans/: 2026-01-16-vibe-hunter-loop.md
prompts/: scoring_rubric.md
prompts/experts/: financial.md  macro.md  tech.md
prompts/reasoning/: blue_team.md  editor.md  multiverse.md  red_team.md
src/: brain_reasoning.py  brain_review.py  config.py  notifier.py  scout_dedup.py  scout_feed.py  scout_gatekeeper.py  scout_gov.py  scout_hunter.py  scout_labor.py  scout_librarian.py  scout_shield.py  scout_social.py
src/utils/: archiver.py  model_factory.py
tests/: test_brain_runner.py  test_scout_dedup.py  test_scout_gov.py  test_scout_gov_429.py  test_scout_shield.py  test_scout_shield_rate_limit.py  test_scout_social.py  test_scout_social_circuit_breaker.py
