[project]
name = "kazuha-invest-engine"
version = "0.1.0"
description = "Kazuha Invest 2.0: The Anticipatory Intelligence System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ddgs>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.0",
    "python-telegram-bot>=21.0",
    "feedparser>=6.0.10",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
